<resources>
    <string name="app_name">KotLinRxjava</string>
    <string name="action_web_socket">Web socket...</string>
    <string name="hint_comment">Comment</string>
    <string name="action_view_coupons">View coupons</string>
    <string name="action_socket">Service</string>
    <string name="sample_navigation">Sample navigation</string>
    <string name="action_print_timestamp">Print Timestamp</string>
    <string name="action_stop_service">Stop service</string>
    <string name="description_previous_image">Previous button</string>
    <string name="description_play_image">Play button</string>
    <string name="description_next_image">Next button</string>
    <string name="action_bound_service">Bound service</string>
    <string name="action_start_count">Start count</string>
    <string name="action_count_intent_service">Count intent service</string>
    <string name="action_schedule_alarm">Schedule Alarm</string>
    <string name="action_cancel_alarm">Cancel Alarm</string>
    <string name="action_local_broadcast">Comment Local Broadcast</string>
    <string name="view_contact">View contact</string>
    <string name="hint_user">User</string>
    <string name="hint_password">Password</string>
    <string name="action_sign_in">Sign In</string>
</resources>
