<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_coupon"
            android:title="@string/action_view_coupons" />
        <item
            android:id="@+id/action_socket"
            android:title="@string/action_web_socket" />
        <item
            android:id="@+id/action_service"
            android:title="@string/action_socket" />
        <item
            android:id="@+id/action_bound_service"
            android:title="@string/action_bound_service" />
        <item
            android:id="@+id/action_count_intent_service"
            android:title="@string/action_count_intent_service" />
        <item
            android:id="@+id/action_alarm"
            android:title="@string/action_schedule_alarm" />
        <item
            android:id="@+id/action_local_broadcast"
            android:title="@string/action_local_broadcast" />
        <item
            android:id="@+id/action_view_contact"
            android:title="@string/view_contact" />
        <item
            android:id="@+id/action_sign_in"
            android:title="@string/action_sign_in" />
    </group>
</menu>